# work24_crawler

./: .env.example  .gitignore  ORGANIZATION.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: primer.md
.github/workflows/: build-windows.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  crawler_architecture.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
docs/: BATCH_IMPLEMENTATION_SUMMARY.md  BUILD_INSTRUCTIONS.md  CLAUDE.md  GITHUB_ACTIONS_GUIDE.md  WINDOWS_BUILD_2025.md  categories.md  searchInstructions.md  targetHTMLS.md
scripts/: build_exe.bat  build_exe.py  build_exe.sh  build_exe_simple.bat  build_gui.bat  build_gui.py
src/: gui_main.py  main.py
src/crawler/: __init__.py  gui_crawler.py  main_crawler.py
src/crawler/core/: __init__.py  auth.py  base_crawler.py  config.py  job_extractor.py  models.py  search_engine.py
src/crawler/utils/: excel_exporter.py  human_behavior.py
tests/: test_work24.py
